CSS buttons' styles added tv size font changed in hero section

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,12 @@ p {
 		width: 750px;
 	}
 }
+@media screen {
+	.container {
+		font-size: 50px
+	}
+}
+
 
 @media (min-width: 992px) {
 	.container {
