--- a/css/style.css
+++ b/css/style.css
@@ -363,20 +363,101 @@ footer p, footer nav ul {
      text-align: right;
    }
  }
+ /* Larger Mobile Devices */
+ @media (min-width:460px) {
+   footer{
+     background-color: #3498DB;
+     background-image: linear-gradient(to left,
+        #3498DB 0%, #3498DB 33.33337%, #3498DB 33.33337%, #3498DB 100%);
+     height: 100%;
+     margin-top: 80px; 
+     width: 100%;
+   }
 
+   footer p, footer nav ul{
+     padding: 2em 0;
+     text-align: left;
+   }
+   
+   footer .right-footer-block {
+     background-color: #3498DB;
+   }
+   
+   footer .logo{
+     padding: 2em 0 2em 1.5em;
+     text-align: right;
+   }
+ }
+ /* Tablets */
+ @media (min-width:768px) {
+  footer{
+     background-color: #3498DB;
+     background-image: linear-gradient(to left,
+        #3498DB 0%, #3498DB 33.33337%, #3498DB 33.33337%, #3498DB 100%);
+     height: 100%;
+     margin-top: 80px; 
+     width: 100%;
+   }
+
+   footer p, footer nav ul{
+     padding: 2em 0;
+     text-align: left;
+   }
+   
+   footer .right-footer-block {
+     background-color: #3498DB;
+   }
+   
+   footer .logo{
+     padding: 2em 0 2em 1.5em;
+     text-align: right;
+   }
+}
 /* DASHBOARD */
 .dashboard {
   background:#F7F7F7;
 }
 .left-nav {
-   height: 100vh;
-   width:14.66666667%;
-   color:#FFFFFF;
+   height: 100%;
+   width:280px;
+   color: #FFFFFF;
    background: #34495E;
    background-image: linear-gradient(206deg, #5F81A3 0%, #34495E 94%);
-   float:left;
-   position: fixed;
+   float: left;
+   position: absolute;
+   -webkit-transition: all 0.3s ease-in-out;
+   -moz-transition: all 0.3s ease-in-out;
+   -o-transition: all 0.3s ease-in-out;
+   transition: all 0.3s ease-in-out;
+   transform: translate(-280px,0);
+   -webkit-transform: translate(-280px,0); /** Chrome & Safari **/
+   -o-transform: translate(-280px,0); /** Opera **/
+   -moz-transform: translate(-280px,0); /** Firefox **/
+ }
+ .left-nav.open {
    display:block;
+   width:280px;
+   -webkit-transition: all 0.3s ease-in-out;
+   -moz-transition: all 0.3s ease-in-out;
+   -o-transition: all 0.3s ease-in-out;
+   transition: all 0.3s ease-in-out;
+   transform: translate(0,0);
+     -webkit-transform: translate(0,0); /** Chrome & Safari **/
+     -o-transform: translate(0,0); /** Opera **/
+     -moz-transform: translate(0,0); /** Firefox **/
+     z-index: 100;
+ }
+ .hamburger {
+   position:absolute;
+   z-index: 1000;
+   background:#34495E;
+   color:#FFF;
+   text-decoration: none;
+   font-size: 22px;
+   padding: 10px 15px;
+   border-radius: 4px;
+   left: 5px;
+   top: 15px;
  }
  .left-nav .site-logo {
    padding:20px 0;
@@ -476,6 +557,7 @@ footer p, footer nav ul {
  }
  .item-box {
    display:block;
+   border-radius: 5px;
    height:230px;
    background: #FFFFFF;
    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.40);
@@ -516,6 +598,32 @@ footer p, footer nav ul {
  }
 /* Laptops and Desktops */
  @media (min-width:992px) {
+
+   .left-nav {
+     height: 100vh;
+     width:14.66666667%;
+     color:#FFFFFF;
+     background: #34495E;
+     background-image: linear-gradient(206deg, #5F81A3 0%, #34495E 94%);
+     float:left;
+     position: fixed;
+     display:block;
+     transform: translate(0,0);
+     -webkit-transform: translate(0,0); /** Chrome & Safari **/
+     -o-transform: translate(0,0); /** Opera **/
+     -moz-transform: translate(0,0); /** Firefox **/
+   }
+   .left-nav.open {
+     width:14.66666667%;
+     transform: translate(0,0);
+     -webkit-transform: translate(0,0); /** Chrome & Safari **/
+     -o-transform: translate(0,0); /** Opera **/
+     -moz-transform: translate(0,0); /** Firefox **/
+   }
+   .hamburger {
+     display:none;
+   }
+ 
    .content {
      padding:1.5em 1%;
      float:right;
@@ -563,6 +671,47 @@ footer p, footer nav ul {
    margin:5px 0 0;
  }
 
+ /* DROPIT */
+.dropit {
+  list-style: none;
+  padding: 20px;
+  margin: 15px 0 0;
+  float:right;
+  display:inline-block;
+}
+.dropit .dropit-trigger { 
+  position: relative; 
+}
+.dropit .dropit-submenu {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  z-index: 1000;
+  display: none;
+  min-width: 100px;
+  list-style: none;
+  padding: 20px;
+  margin: 15px 0 0;
+}
+.dropit .dropit-open .dropit-submenu { 
+  display: block;
+  background: #FFFFFF;
+  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.30);
+  border-radius: 4px;
+}
+.dropit .dropit-open .dropit-submenu li { 
+  display: block;
+  margin-bottom: 20px;
+}
+.dropit .dropit-open .dropit-submenu li:last-child { 
+  margin-bottom: 0px;
+}
+.dropit .dropit-open .dropit-submenu li a { 
+  color:#34495E;
+  text-decoration: none;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-weight:100;
+}
 
 
 
