--- a/css/style.css
+++ b/css/style.css
@@ -560,7 +560,7 @@ footer p, footer nav ul {
    border-radius: 5px;
    height:230px;
    background: #FFFFFF;
-   box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.40);
+   box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.40);
    position: relative;
    overflow: hidden;
    padding:20px;
@@ -713,6 +713,7 @@ footer p, footer nav ul {
   font-weight:100;
 }
 
+/* popup */
 
 
 
