change from left to right in dropit css

--- a/css/dropit.css
+++ b/css/dropit.css
@@ -17,7 +17,7 @@
 .dropit .dropit-submenu {
     position: absolute;
     top: 100%;
-    left: 0; /* dropdown left or right */
+    right: 0;
     z-index: 1000;
     display: none;
     min-width: 150px;
