--- a/css/dropit.css
+++ b/css/dropit.css
@@ -26,3 +26,24 @@
 	margin: 0;
 }
 .dropit .dropit-open .dropit-submenu { display: block; }
+
+.settings .dropit {
+    list-style: none;
+    padding: 20px;
+    margin: 0;
+}
+.settings .dropit .dropit-trigger { position: relative; }
+.settings .dropit .dropit-submenu {
+    position: absolute;
+    text-align: left;
+    top: -115px;
+    left: 0;
+    z-index: 1000;
+    display: none;
+    min-width: 150px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+}
+.settings .dropit .dropit-open .dropit-submenu { display: block; }
